@@ -174,10 +174,10 @@ Description text
  <I>h</I>
  ?<I>arg...</I>?
 </DT><DD>
-Used to position and resise the widget specified by
+Used to position and resize the widget specified by
 <I>path</I>. <I>w</I> and <I>h</I> are used to specify the requested
 width and height of the <I>path</I> widget for use by <B>wm
-geometry</B>. The placement of the widget relative to other widgets or
+geometry</B> (set to 0 to use current values). The placement of the widget relative to other widgets or
 the screen is controlled by additional arguments:
 <DL>
  <DT><B>at</B> <I>x</I> <I>y</I></DT>
